# backend/src/main/java/com/neverempty/backend/model/Item.java
@@ -41,11 +41,15 @@ public class Item {
 
     private ConsumerCategory consumerCategory;
 
-    private Double monthlyConsumptionRate;
+    private Double daysToRestock;
+
+    private Double usagePerDay;
 
     private Boolean autoCalc;
 
     private String lastBoughtDate;
+
+    private Double standardPurchaseQuantity;
 
     @CreatedDate
     private Instant createdAt;
